--- a/filepicker/src/main/res/values-ar/strings.xml
+++ b/filepicker/src/main/res/values-ar/strings.xml
@@ -4,7 +4,7 @@
     <string name="camera_permission">سماح لهذا التطبيق بالتقاط صورة من الكاميرا</string>
     <string name="voice">ملفات صوتية</string>
     <string name="text">وثائق</string>
-    <string name="images">صولا</string>
+    <string name="images">صور</string>
     <string name="video">فيديوهات</string>
     <string name="files">ملفات</string>
     <string name="pdf">ملفات PDF</string>
