--- a/filepicker/src/main/res/values-ar/strings.xml
+++ b/filepicker/src/main/res/values-ar/strings.xml
@@ -4,13 +4,13 @@
     <string name="camera_permission">سماح لهذا التطبيق بالتقاط صورة من الكاميرا</string>
     <string name="voice">ملفات صوتية</string>
     <string name="text">وثائق</string>
-    <string name="images">صولا</string>
+    <string name="images">صور</string>
     <string name="video">فيديوهات</string>
     <string name="files">ملفات</string>
     <string name="pdf">ملفات PDF</string>
     <string name="compress">ملفات مطغوطه</string>
     <string name="word">Word ملفات</string>
-    <string name="powerPoint">PowerPoint ملفات</string>
+    <string name="powerPoint">PowerPoint</string>
     <string name="excel">Excel ملفات</string>
     <string name="any_type">Any type</string>
 </resources>
