--- a/filepicker/src/main/res/values-ar/strings.xml
+++ b/filepicker/src/main/res/values-ar/strings.xml
@@ -12,5 +12,5 @@
     <string name="word">Word ملفات</string>
     <string name="powerPoint">PowerPoint</string>
     <string name="excel">Excel ملفات</string>
-    <string name="any_type">Any type</string>
+    <string name="any_type">الكل</string>
 </resources>
